# bidoof

./: .breakpoints  BadWords.txt  Candicebank545992419519234078  Mr Noodlebank478190340734451714  Mr Noodleinv478190340734451714  Mr Noodlelevel728243193849839696478190340734451714  bump.txt  file.txt  goodbye.txt  keep_alive.py  leveling.txt  main.py  oauth.py  premium.txt  pyproject.toml  swear.txt  welcome.txt
inventories/: Mr Noodleinv478190340734451714.txt
levels/: CamrocBoilevel728243193849839696790543616152961045.txt  Mr Noodlelevel728243193849839696478190340734451714.txt
lottery/: nextlottery.txt
reminders/: 2134.txt
routes/: discord_oauth.py
templates/: index.html
templates/includes/: _navbar.html
wallets/: Mr Noodlewallet478190340734451714.txt
